--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 </head>
 <body>
 	<div id='container'>
-		<img src="slide.png" usemap="#Map">
+		<img src="soldier.jpg" usemap="#Map">
         <map name="Map">
-          <area shape="rect" coords="99,385,113,391" href="#">
-          <area shape="rect" coords="100,385,625,407" href="http://www.omegaministry.org/Messages/Perfect-Vision-Part-1.wma">
-          <area shape="rect" coords="100,410,624,426" href="http://www.omegaministry.org/Messages/Perfect-Vision-Part-2.wma">
-          <area shape="rect" coords="99,429,630,446" href="http://www.omegaministry.org/Messages/Perfect-Vision-Part-3.wma">
-          <area shape="rect" coords="104,450,621,469" href="http://www.omegaministry.org/Messages/20-20-Vision-Part-1.wma">
-          <area shape="rect" coords="106,470,620,489" href="http://www.omegaministry.org/Messages/20-20-Vision-Part-2.wma">
+          <area shape="rect" coords="93,454,652,472" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-1.wma" alt="eagles1">
+          <area shape="rect" coords="93,472,650,486" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-2.wma" alt="eagles2">
+          <area shape="rect" coords="96,489,651,506" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-3.wma" alt='eagles3'>
+          <area shape="rect" coords="106,516,623,532" href="http://www.omegaministry.org/Messages/Soldiers-Part-1.wma" alt='soldiers'>
         </map>
 	</div>
 </body>
