--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Perfect Vision</title>
+	<title>Soldiers</title>
 	<style>
 		#container{
 			padding: 5px;
