--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
 <body>
 	<div id='container'>
-		<img src="soldier.jpg" usemap="#Map">
-        <map name="Map">
-          <area shape="rect" coords="93,454,652,472" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-1.wma" alt="eagles1">
-          <area shape="rect" coords="93,472,650,486" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-2.wma" alt="eagles2">
-          <area shape="rect" coords="96,489,651,506" href="http://www.omegaministry.org/Messages/You-Shall-Mount-Up-With-Eagles-Wings-Part-3.wma" alt='eagles3'>
-          <area shape="rect" coords="106,516,623,532" href="http://www.omegaministry.org/Messages/Soldiers-Part-1.wma" alt='soldiers'>
-        </map>
+	<img src="matrix.jpg" usemap="#Map">
+    <map name="Map">
+      <area shape="rect" coords="153,358,695,381" href="http://www.omegaministry.org/Messages/The-Matrix-Part-1.wma">
+      <area shape="rect" coords="153,386,693,409" href="http://www.omegaministry.org/Messages/The-Matrix-Part-2.wma">
+      <area shape="rect" coords="154,414,693,434" href="http://www.omegaministry.org/Messages/The-Matrix-Part-3.wma">
+      <area shape="rect" coords="89,438,762,466" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-1.wma">
+      <area shape="rect" coords="89,468,759,487" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-2.wma">
+      <area shape="rect" coords="94,492,756,516" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-3.wma">
+    </map>
 	</div>
 </body>
 </html>
