Monarch mind control

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>The Matrix</title>
+	<title>Monarch Mind Control</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,14 +12,13 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="matrix.jpg" usemap="#Map">
+	<img src="mind.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="153,358,695,381" href="http://www.omegaministry.org/Messages/The-Matrix-Part-1.wma">
-      <area shape="rect" coords="153,386,693,409" href="http://www.omegaministry.org/Messages/The-Matrix-Part-2.wma">
-      <area shape="rect" coords="154,414,693,434" href="http://www.omegaministry.org/Messages/The-Matrix-Part-3.wma">
-      <area shape="rect" coords="89,438,762,466" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-1.wma">
-      <area shape="rect" coords="89,468,759,487" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-2.wma">
-      <area shape="rect" coords="94,492,756,516" href="http://www.omegaministry.org/Messages/Getting-Out-of-the-Matrix-Part-3.wma">
+      <area shape="rect" coords="227,622,898,654" href="http://omegaministry.org/Messages/Brain-Washing-Part-1.wma">
+      <area shape="rect" coords="228,653,896,674" href="http://omegaministry.org/Messages/Brain-Washing-Part-2.wma">
+      <area shape="rect" coords="230,677,894,698" href="http://omegaministry.org/Messages/Brain-Washing-Part-3.wma">
+      <area shape="rect" coords="187,701,937,728" href="http://omegaministry.org/Messages/Monarch-Mind-Control-Part-1.wma">
+      <area shape="rect" coords="191,727,933,752" href="http://omegaministry.org/Messages/Monarch-Mind-Control-Part-2.wma">
     </map>
 	</div>
 </body>
