--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <area shape="rect" coords="230,677,894,698" href="http://omegaministry.org/Messages/Brain-Washing-Part-3.wma">
       <area shape="rect" coords="187,701,937,728" href="http://omegaministry.org/Messages/Monarch-Mind-Control-Part-1.wma">
       <area shape="rect" coords="191,727,933,752" href="http://omegaministry.org/Messages/Monarch-Mind-Control-Part-2.wma">
+      <area shape="rect" coords="134,419,616,441" href="http://www.omegaministries/Messages/Brain-Washing-Part-1.wma">
+      <area shape="rect" coords="133,442,620,458" href="http://www.omegaministries/Messages/Brain-Washing-Part-2.wma">
+      <area shape="rect" coords="131,459,617,474" href="http://www.omegaministries/Messages/Brain-Washing-Part-3.wma">
+      <area shape="rect" coords="103,481,645,496" href="http://www.omegaministries/Messages/Monarch-Mind-Control-Part-1.wma">
+      <area shape="rect" coords="97,499,648,517" href="http://www.omegaministries/Messages/Monarch-Mind-Control-Part-2.wma">
     </map>
 	</div>
 </body>
