fixed map again

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<div id='container'>
 	<img src="mind.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="134,419,616,441" href="http://www.omegaministries.org/Messages/Brain-Washing-Part-1.wma">
-      <area shape="rect" coords="133,442,620,458" href="http://www.omegaministries.org/Messages/Brain-Washing-Part-2.wma">
-      <area shape="rect" coords="131,459,617,474" href="http://www.omegaministries.org/Messages/Brain-Washing-Part-3.wma">
-      <area shape="rect" coords="103,481,645,496" href="http://www.omegaministries.org/Messages/Monarch-Mind-Control-Part-1.wma">
-      <area shape="rect" coords="97,499,648,517" href="http://www.omegaministries.org/Messages/Monarch-Mind-Control-Part-2.wma">
+      <area shape="rect" coords="134,419,616,441" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-1.wma">
+      <area shape="rect" coords="133,442,620,458" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-2.wma">
+      <area shape="rect" coords="131,459,617,474" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-3.wma">
+      <area shape="rect" coords="103,481,645,496" href="http://www.omegaministry.org/Messages/Monarch-Mind-Control-Part-1.wma">
+      <area shape="rect" coords="97,499,648,517" href="http://www.omegaministry.org/Messages/Monarch-Mind-Control-Part-2.wma">
     </map>
 	</div>
 </body>
