--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Monarch Mind Control</title>
+	<title>Masters of the Game</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,13 +12,14 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="mind.jpg" usemap="#Map">
+	<img src="masters_game.png" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="134,419,616,441" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-1.wma">
-      <area shape="rect" coords="133,442,620,458" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-2.wma">
-      <area shape="rect" coords="131,459,617,474" href="http://www.omegaministry.org/Messages/Brain-Washing-Part-3.wma">
-      <area shape="rect" coords="103,481,645,496" href="http://www.omegaministry.org/Messages/Monarch-Mind-Control-Part-1.wma">
-      <area shape="rect" coords="97,499,648,517" href="http://www.omegaministry.org/Messages/Monarch-Mind-Control-Part-2.wma">
+      <area shape="rect" coords="130,394,627,412" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-1.wma">
+      <area shape="rect" coords="128,412,628,430" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-2.wma">
+      <area shape="rect" coords="127,432,627,445" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-3.wma">
+      <area shape="rect" coords="73,446,681,464" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-1.wma">
+      <area shape="rect" coords="74,461,680,481" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-2.wma">
+      <area shape="rect" coords="73,481,679,497" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-3.wma">
     </map>
 	</div>
 </body>
