--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Masters of the Game</title>
+	<title>Army</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,14 +12,14 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="masters_game.png" usemap="#Map">
+	<img src="army.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="130,394,627,412" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-1.wma">
-      <area shape="rect" coords="128,412,628,430" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-2.wma">
-      <area shape="rect" coords="127,432,627,445" href="http://www.omegaministry.org/Messages/Big-Pimpin-Part-3.wma">
-      <area shape="rect" coords="73,446,681,464" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-1.wma">
-      <area shape="rect" coords="74,461,680,481" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-2.wma">
-      <area shape="rect" coords="73,481,679,497" href="http://www.omegaministry.org/Messages/The-Masters-of-the-Game-Part-3.wma">
+      <area shape="rect" coords="30,394,675,415" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-1.wma">
+      <area shape="rect" coords="33,416,669,433" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-2.wma">
+      <area shape="rect" coords="31,435,669,453" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-3.wma">
+      <area shape="rect" coords="101,455,595,474" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-1.wma">
+      <area shape="rect" coords="102,474,595,494" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-2.wma">
+      <area shape="rect" coords="103,494,596,510" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-3.wma">
     </map>
 	</div>
 </body>
