--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Army</title>
+	<title>Dream Girls</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,14 +12,13 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="army.jpg" usemap="#Map">
+	<img src="dreamgirls.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="30,394,675,415" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-1.wma">
-      <area shape="rect" coords="33,416,669,433" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-2.wma">
-      <area shape="rect" coords="31,435,669,453" href="http://www.omegaministry.org/Messages/The-Military-is-for-the-Militant-Part-3.wma">
-      <area shape="rect" coords="101,455,595,474" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-1.wma">
-      <area shape="rect" coords="102,474,595,494" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-2.wma">
-      <area shape="rect" coords="103,494,596,510" href="http://www.omegaministry.org/Messages/I-Am-Army-Part-3.wma">
+      <area shape="rect" coords="59,349,678,378" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-1.wma">
+      <area shape="rect" coords="65,379,677,398" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-2.wma">
+      <area shape="rect" coords="67,399,676,418" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-3.wma">
+      <area shape="rect" coords="105,421,639,440" href="http://www.omegaministry.org/Messages/The-Dream-Girls-Part-1.wma">
+      <area shape="rect" coords="107,441,637,462" href="http://www.omegaministry.org/Messages/The-Dream-Girls-Part-2.wma">
     </map>
 	</div>
 </body>
