--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="dreamgirls.jpg" usemap="#Map">
+	<img src="judge_not.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="59,349,678,378" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-1.wma">
-      <area shape="rect" coords="65,379,677,398" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-2.wma">
-      <area shape="rect" coords="67,399,676,418" href="http://www.omegaministry.org/Messages/Who-Rules-the-World-Girls-Part-3.wma">
-      <area shape="rect" coords="105,421,639,440" href="http://www.omegaministry.org/Messages/The-Dream-Girls-Part-1.wma">
-      <area shape="rect" coords="107,441,637,462" href="http://www.omegaministry.org/Messages/The-Dream-Girls-Part-2.wma">
+      <area shape="rect" coords="110,378,605,400" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-1.wma">
+      <area shape="rect" coords="112,402,604,421" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-2.wma">
+      <area shape="rect" coords="113,422,603,443" href="http://www.omegaministry.org/Messages/Judge-Not-2-Part-1.wma">
+      <area shape="rect" coords="110,444,602,463" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-2.wma">
     </map>
 	</div>
 </body>
