--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Judge Not?</title>
+	<title>Instruments of Praise</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,12 +12,14 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="judge_not.jpg" usemap="#Map">
+	<img src="instruments.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="110,378,605,400" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-1.wma">
-      <area shape="rect" coords="112,402,604,421" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-2.wma">
-      <area shape="rect" coords="113,422,603,443" href="http://www.omegaministry.org/Messages/Judge-Not-2-Part-1.wma">
-      <area shape="rect" coords="110,444,602,463" href="http://www.omegaministry.org/Messages/Judge-Not-1-Part-2.wma">
+      <area shape="rect" coords="58,397,635,419" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-1.wma">
+      <area shape="rect" coords="60,420,632,437" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-2.wma">
+      <area shape="rect" coords="60,440,631,461" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-3.wma">
+      <area shape="rect" coords="87,461,610,482" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-1.wma">
+      <area shape="rect" coords="85,484,611,503" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-2.wma">
+      <area shape="rect" coords="84,506,607,527" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-3.wma">
     </map>
 	</div>
 </body>
