--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Instruments of Praise</title>
+	<title>Metrosexual Messiah</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,14 +12,13 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="instruments.jpg" usemap="#Map">
+	<img src="metro.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="58,397,635,419" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-1.wma">
-      <area shape="rect" coords="60,420,632,437" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-2.wma">
-      <area shape="rect" coords="60,440,631,461" href="#" target="http://www.omegaministry.org/Messages/Preparing-a-Vessel-of-Honor-Part-3.wma">
-      <area shape="rect" coords="87,461,610,482" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-1.wma">
-      <area shape="rect" coords="85,484,611,503" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-2.wma">
-      <area shape="rect" coords="84,506,607,527" href="#" target="http://www.omegaministry.org/Messages/Instruments-of-Praise-Part-3.wma">
+      <area shape="rect" coords="132,459,587,478" href="#" target="http://www.omegaministry.org/Messages/The-MetroSexual-Messiah-Part-1.wma">
+      <area shape="rect" coords="137,477,581,491" target="http://www.omegaministry.org/Messages/The-MetroSexual-Messiah-Part-2.wma">
+      <area shape="rect" coords="156,492,562,503" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-1.wma">
+      <area shape="rect" coords="160,503,559,519" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-2.wma">
+      <area shape="rect" coords="162,520,557,534" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-3.wma">
     </map>
 	</div>
 </body>
