--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta lang='en'>
-	<title>Metrosexual Messiah</title>
+	<title>God Of Fire</title>
 	<style>
 		#container{
 			padding: 5px;
@@ -12,13 +12,13 @@
 </head>
 <body>
 	<div id='container'>
-	<img src="metro.jpg" usemap="#Map">
+	<img src="fire.jpg" usemap="#Map">
     <map name="Map">
-      <area shape="rect" coords="132,459,587,478" href="#" target="http://www.omegaministry.org/Messages/The-MetroSexual-Messiah-Part-1.wma">
-      <area shape="rect" coords="137,477,581,491" target="http://www.omegaministry.org/Messages/The-MetroSexual-Messiah-Part-2.wma">
-      <area shape="rect" coords="156,492,562,503" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-1.wma">
-      <area shape="rect" coords="160,503,559,519" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-2.wma">
-      <area shape="rect" coords="162,520,557,534" target="http://www.omegaministry.org/Messages/All-Eyes-on-Jesus-Part-3.wma">
+      <area shape="rect" coords="64,419,643,447" href="http://www.omegafellowship.org/Messages/The-Baptism-of-Fire-Part-1.mp3" target="_blank">
+      <area shape="rect" coords="68,449,638,469" href="http://www.omegafellowship.org/Messages/The-Baptism-of-Fire-Part-2.mp3" target="_blank">
+      <area shape="rect" coords="86,470,619,489" href="http://www.omegafellowship.org/Messages/A-God-of-Fire-Part-1.mp3" target="_blank">
+      <area shape="rect" coords="87,492,617,513" href="http://www.omegafellowship.org/Messages/A-God-of-Fire-Part-2.mp3" target="_blank">
+      <area shape="rect" coords="89,514,620,534" href="http://www.omegafellowship.org/Messages/A-God-of-Fire-Part-3.mp3" target="_blank">
     </map>
 	</div>
 </body>
